create and edit item completed

--- a/Web.config
+++ b/Web.config
@@ -17,7 +17,7 @@
 		</pages>
 	</system.web>
 	<connectionStrings>
-		<add name="MyConnectionString" connectionString="Data Source=MOHSIN\SQLEXPRESS;Initial Catalog=InterviewDB;User ID=sa;Password=Abcd@1234;" providerName="System.Data.SqlClient" />
+		<add name="MyConnectionString" connectionString="Data Source=MOHSIN\SQLEXPRESS;Initial Catalog=InterviewDB;User ID=sa;Password=Abcd@1234; Integrated Security=false;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
